# SenseMap

./: .commitlintrc.json  .editorconfig  .env.example  .gitignore  Makefile  docker-compose.yml  package.json  pyproject.toml
.github/: BRANCH_PROTECTION_SETUP.md  CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  commitlint.yml  tag-validate.yml
apps/api/: Dockerfile  config.py  embeddings.py  graph_serving.py  main.py  requirements.txt  retrieval.py
apps/web/: package.json
docs/architecture/: ingestion-sequence.md
docs/decisions/: branch-policy.md  semantic-versioning.md
docs/runbooks/: airflow_local.md  entity-relation-pipeline.md  gds-enrichment.md  graph-viz-api.md  pdf-ingestion-pipeline.md  retrieval-api.md
neo4j/: README.md
neo4j/cypher/: constraints.cypher  indexes.cypher  lexical_constraints.cypher  quality_checks.cypher  schema_init.cypher
orchestration/airflow/: Dockerfile  requirements.txt
services/chunking/: __init__.py  metadata.py  parent_child.py  sentence_window.py
services/conversation_memory/: __init__.py  extract_claims.py  ingest.py  merge.py  provenance.py  validate.py
services/embeddings/: __init__.py  base.py  cache.py  local_bge_embedder.py  openai_embedder.py
services/extraction/: __init__.py  pipeline.py
services/graph_builder/: __init__.py  entity_writer.py  lexical_writer.py  merge_utils.py  provenance.py  validators.py
services/graphrag/: __init__.py
services/orchestration/: __init__.py  pipeline_metadata.py
shared/python/: config.py
(+115 files in other folders)
