[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sensemap"
version = "0.1.0"
description = "Living GraphRAG — ingestion, graph build, retrieval"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "ruff>=0.1",
  "mypy>=1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*", "services*", "apps*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
